tests/NormalTests/paczka1/small_fuzzy/31199648.err
Error in line 1: DyLtBhq9W S213 28,7
Error in line 2: DyLtBhq9W A382 41,9
Error in line 11: YVbwmv{ S182 59,6
Error in line 9: YVbwmv3 S213 22,2
